--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,9 @@
     "from nltk import *\n",
     "import math\n",
     "from scipy.stats import entropy  # provides Shannon entropy and KL divergence\n",
-    "import numpy as np    \n"
+    "import numpy as np    \n",
+    "import copy\n",
+    "\n"
    ]
   },
   {
@@ -34,9 +36,9 @@
    "outputs": [],
    "source": [
     "def DCText(corpus_name, filter_kwargs=None):\n",
-    "    from pydracor import DraCor, Corpus\n",
-    "    import requests    \n",
-    "    dracor = DraCor()\n",
+    "    #from pydracor import DraCor, Corpus\n",
+    "        \n",
+    "    #dracor = DraCor()\n",
     "\n",
     "    # Step 1: Initialize corpus\n",
     "    corpus = Corpus(corpus_name)\n",
@@ -529,7 +531,7 @@
     "freq_only = df_frequencies.select_dtypes(include=['number'])\n",
     "\n",
     "# Now run pairwise distance on numeric data only\n",
-    "from scipy.spatial.distance import pdist, squareform\n",
+    "#from scipy.spatial.distance import pdist, squareform\n",
     "distances = pdist(freq_only.values, metric='euclidean')\n",
     "\n",
     "distance_matrix = pd.DataFrame(\n",
@@ -630,11 +632,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Convert your frequency dictionary to a DataFrame\n",
+    "# Convert  frequency dictionary to a DataFrame\n",
     "tag_df = pd.DataFrame.from_dict(pos_frequencies, orient=\"index\").fillna(0.0)\n",
     "tag_df['authors'] = combined_data['authors']\n",
     "\n",
@@ -652,7 +650,6 @@
     "#print(author_means_percentage)\n",
     "\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "pos_columns = [col for col in author_means_percentage.columns if col != 'authors']\n",
@@ -824,8 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "\n",
     "\n",
     "threshold = 2\n",
     "df_sig = df_long[df_long['z_score'].abs() >= threshold]\n",
@@ -878,7 +874,7 @@
     "\n",
     "\n",
     "g = sns.FacetGrid(\n",
-    "    data=df_sig,  # rename to your df name\n",
+    "    data=df_sig,  \n",
     "    col=\"bigram\",\n",
     "    col_wrap=16,        # number of facets per row\n",
     "    height=4,\n",
@@ -935,7 +931,6 @@
     "            G.add_edge(tag1, tag2, weight=weight)\n",
     "\n",
     "    # Filter out edges with very low frequency to reduce clutter for visualization\n",
-    "    # You might need to adjust this threshold based on your data and corpus size\n",
     "    threshold = 0.0005 # Example threshold for normalized frequencies\n",
     "    filtered_edges = [\n",
     "    (u, v, d) for u, v, d in G.edges(data=True) if d[\"weight\"] >= threshold\n",
@@ -985,11 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "import pandas as pd\n",
-    "from sklearn.decomposition import PCA\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "# ---------- 1. Combine POS uni-, bi-, and trigram frequencies ----------\n",
     "X = {}\n",
