--- a/main.ipynb
+++ b/main.ipynb
@@ -7,8 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import pydracor\n",
-    "\n",
     "import spacy\n",
     "import re\n",
     "import requests\n",
@@ -24,7 +22,7 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.decomposition import PCA\n",
     "#from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import networkx as nx\n",
+    "#import networkx as nx\n",
     "from nltk import *\n",
     "import math\n",
     "import numpy as np    \n",
@@ -63,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    # Step 1: Initialize corpus from dracor outside the function to aviod repeat loading\n",
+    "#initialize corpus from dracor outside the function to aviod repeat loading\n",
     "\n",
     "from pydracor import  Corpus\n",
     "sh_corpus = Corpus(\"gersh\")\n",
@@ -129,7 +127,7 @@
     "        ids.append(play_meta['id'])\n",
     "        names.append(play_meta['name'])\n",
     "\n",
-    "    # Step 4: Use correct corpus in the URL\n",
+    "    # use correct corpus in the URL\n",
     "        url = f\"https://dracor.org/api/v1/corpora/{corpus_name}/plays/{play_meta['name']}/spoken-text\"\n",
     "        response = requests.get(url)\n",
     "        spoken_text.append(response.text)\n",
@@ -191,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#corpus: wagner's other works\n",
+    "# wagner's other works\n",
     "urls = [\"https://opera-guide.ch/operas/das+liebesverbot/libretto/de/\",\n",
     "      \"https://opera-guide.ch/operas/die+feen/libretto/de/\",\n",
     "      \"https://opera-guide.ch/operas/rienzi+der+letzte+der+tribunen/libretto/de/\"]\n",
@@ -199,7 +197,7 @@
     "\n",
     "\n",
     "def getHTMLSpokenText(url):\n",
-    "    #get play name from url\n",
+    "    # get play name from url\n",
     "    name=re.search(r\"/operas/([^/]+)/libretto/\", url).group(1).replace(\"+\", \"-\")\n",
     "\n",
     "    response = requests.get(url)\n",
@@ -214,7 +212,7 @@
     "    if not div:\n",
     "        return \"\"\n",
     "\n",
-    "    # Step 2: Make a clean copy of the div before we modify it\n",
+    "    # Step 2: Make a clean copy of the div before modifing\n",
     "    div_clean = BeautifulSoup(str(div), \"html.parser\").div\n",
     "\n",
     "    # Step 3: Remove <i> tags\n",
@@ -297,10 +295,9 @@
    "source": [
     "\n",
     "def combineData(*datasets):\n",
-    "    \"\"\"\n",
-    "    Combines multiple dict datasets with the same keys.\n",
-    "    Each key's value from all datasets will be concatenated.\n",
-    "    \"\"\"\n",
+    "\n",
+    "    #combines multiple dict datasets with the same keys\n",
+    "\n",
     "    if not datasets:\n",
     "        return {}\n",
     "    \n",
@@ -330,10 +327,7 @@
     "    #print(name)\n",
     "    data= DCText(\"ger\",{\"authors__name__icontains\":name})\n",
     "    #print(data)\n",
-    "    co_data=combineData(data,co_data)\n",
-    "\n",
-    "    \n",
-    "\n"
+    "    co_data=combineData(data,co_data)\n"
    ]
   },
   {
@@ -357,12 +351,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Tokenize all texts once and store\n",
+    "# tokenize all texts in courpus dictionary once and store\n",
     "def tokenizeData(data, nlp):\n",
     "    data[\"tokens\"] = [nlp(text) for text in data[\"spoken_text\"]]\n",
     "    return data\n",
     "\n",
-    "# Tokenize both datasets\n",
+    "# tokenize all datasets\n",
     "nlp = spacy.load(\"de_core_news_sm\")\n",
     "\n",
     "wa_data = tokenizeData(wa_data, nlp)\n",
@@ -377,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#POS Tag N-grams\n",
+    "# get and store POS Tag in dictionary\n",
     "\n",
     "def getPOS(tokens):\n",
     "    return [token.pos_ for token in tokens if token.is_alpha] #if token.is_alpha?\n",
@@ -457,12 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#part1: funtional words\n",
     "# Function Word Frequencies\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "def getFunWord(text):\n",
     "    return str(\" \".join([token.lemma_ for token in text[:min_tokens] if token.is_stop]).lower()).split()\n"
    ]
@@ -522,8 +511,7 @@
     "df_avg += eps\n",
     "df_prob = df_avg.div(df_avg.sum(axis=1), axis=0)\n",
     "\n",
-    "#L1-normalize to make probabilities\n",
-    "#Divide by the sum so the vector sums to 1.\n",
+    "#L1-normalize to make probabilities divide by the sum so the vector sums to 1\n",
     "\n",
     "\n",
     "print(df_prob)"
@@ -579,17 +567,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
     "def sim(df):\n",
-    "    # sigma\n",
     "    sigma = 0.5\n",
-    "\n",
-    "    # Ähnlichkeitsmatrix berechnen\n",
     "    similarity_matrix = np.exp(-df / sigma)\n",
     "\n",
-    "    # Optional: als DataFrame mit gleichen Indizes und Spalten wie kl_matrix\n",
+    "   \n",
     "    similarity_matrix = pd.DataFrame(similarity_matrix, index=df.index, columns=df.columns)\n",
     "    return similarity_matrix\n",
     "\n",
@@ -613,8 +595,8 @@
    "id": "19bcbf21",
    "metadata": {},
    "source": [
-    "convert kl values to similarities according to ...\n",
-    "the value will be in [0,1], the higher the similar."
+    "convert kl values to similarities according to Hughes et al.\n",
+    "the value will be in [0,1], the higher the more similar."
    ]
   },
   {
@@ -670,7 +652,7 @@
    "source": [
     "#Feature Extraction: POS Tag Frequencies and N-grams\n",
     "\n",
-    "# Function to calculate normalized POS tag frequencies (unigrams)\n",
+    "#function to calculate normalized POS tag frequencies (unigrams)\n",
     "def calculate_pos_frequencies(pos):\n",
     "    pos_count = Counter(pos)\n",
     "    total_tags = sum(pos_count.values())\n",
@@ -678,7 +660,7 @@
     "    pos_freq = {tag: count / total_tags for tag, count in pos_count.items()}\n",
     "    return pos_freq\n",
     "\n",
-    "# Function to calculate normalized POS tag N-gram frequencies\n",
+    "# function to calculate normalized POS tag N-gram frequencies\n",
     "def calculate_pos_ngrams(pos, n):\n",
     "    pos_ngrams = list(ngrams(pos, n))\n",
     "    ngram_count = Counter(pos_ngrams)\n",
@@ -687,7 +669,7 @@
     "    ngram_freq = {ngram: count / total_ngrams for ngram, count in ngram_count.items()}\n",
     "    return ngram_freq\n",
     "\n",
-    "# Store calculated features for each play\n",
+    "# store calculated features for each play\n",
     "pos_frequencies = {}\n",
     "pos_bigrams = {}\n",
     "pos_trigrams = {}\n",
@@ -707,16 +689,16 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Convert  frequency dictionary to a DataFrame\n",
+    "# convert  frequency dictionary to a DataFrame\n",
     "tag_df = pd.DataFrame.from_dict(pos_frequencies, orient=\"index\").fillna(0.0)\n",
     "tag_df['authors'] = combined_data['authors']\n",
     "\n",
     "\n",
     "author_means = tag_df.groupby(\"authors\").mean().reset_index()\n",
-    "# Drop non-POS columns first if needed\n",
+    "# drop non-POS columns first\n",
     "pos_columns = [col for col in author_means.columns if col not in ['authors']]\n",
     "\n",
-    "# Calculate row-wise percentage for each author\n",
+    "# calculate row-wise percentage for each author\n",
     "author_means_percentage = author_means.copy()\n",
     "author_means_percentage[pos_columns] = author_means_percentage[pos_columns].div(\n",
     "    author_means_percentage[pos_columns].sum(axis=1), axis=0\n",
@@ -747,7 +729,7 @@
     "                f\"{val:.1f}%\",            # show one decimal\n",
     "                ha='center', va='center',\n",
     "                fontsize=8,\n",
-    "                color='white'             # adjust color for contrast\n",
+    "                color='white'         \n",
     "            )\n",
     "            bottom += val\n",
     "\n",
@@ -781,7 +763,7 @@
    "outputs": [],
    "source": [
     "# Prepare data for heatmaps (bigram frequency matrices)\n",
-    "# create a heatmap for each author.\n",
+    "# create a heatmap for each author\n",
     "\n",
     "all_unique_tags = sorted(list(set(tag for tags_list in combined_data[\"pos_tags\"] for tag in tags_list)))\n",
     "\n",
@@ -789,27 +771,27 @@
     "n_rows, n_cols = 6, 9  # 6x9 grid\n",
     "fig, axes = plt.subplots(n_rows, n_cols, figsize=(4*n_cols, 4*n_rows))  # adjust size as needed\n",
     "\n",
-    "# Flatten axes array for easy iteration\n",
+    "# flatten axes array for easy iteration\n",
     "axes = axes.flatten()\n",
     "\n",
     "for ax, name in zip(axes, combined_data[\"names\"]):\n",
     "    bigram_freqs = pos_bigrams[name]\n",
     "\n",
-    "    # Create a matrix for the heatmap\n",
+    "    # create a matrix for the heatmap\n",
     "    bigram_matrix = pd.DataFrame(0.0, index=all_unique_tags, columns=all_unique_tags)\n",
     "    for (tag1, tag2), freq in bigram_freqs.items():\n",
     "        if tag1 in all_unique_tags and tag2 in all_unique_tags:\n",
     "            bigram_matrix.loc[tag1, tag2] = freq\n",
     "    #print(bigram_matrix)\n",
     "    \n",
-    "    # Plot heatmap on the specific axis\n",
+    "    # plot heatmap on the specific axis\n",
     "    sns.heatmap(bigram_matrix, annot=False, fmt=\".2f\", cmap=\"Blues\",\n",
     "                linewidths=.5, linecolor='lightgray', cbar=True, ax=ax, vmin=0, vmax=0.01, center=0.003)\n",
     "    ax.set_title(f'{name}', fontsize=10)\n",
     "    ax.set_xlabel('Second Tag', fontsize=8)\n",
     "    ax.set_ylabel('First Tag', fontsize=8)\n",
     "\n",
-    "# Turn off any unused subplots\n",
+    "# turn off any unused subplots\n",
     "for i in range(len(combined_data[\"names\"]), len(axes)):\n",
     "    axes[i].axis('off')\n",
     "\n",
@@ -826,7 +808,7 @@
    "source": [
     "# bi gram z score\n",
     "\n",
-    "# Gather all unique bigrams\n",
+    "# gather all unique bigrams\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "#print(pos_bigrams)\n",
@@ -841,7 +823,7 @@
     "        #print(bi_str, freq)\n",
     "\n",
     "#print(all_bigrams)\n",
-    "# Create a DataFrame: rows=texts, columns=bigrams\n",
+    "# create a DataFrame: rows=texts, columns=bigrams\n",
     "df = pd.DataFrame(index=pos_bigrams.keys(), columns=all_bigrams).fillna(0.0)\n",
     "\n",
     "\n",
@@ -851,7 +833,7 @@
     "        df.loc[text, bi_str] = freq\n",
     "\n",
     "#print(df)\n",
-    "# Compute z-scores for each bigram\n",
+    "# compute z-scores for each bigram\n",
     "z_scores = df.copy()\n",
     "z_scores['authors']=combined_data['authors']\n",
     "for col in df.columns:\n",
@@ -885,27 +867,27 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Select bigram columns\n",
+    "# select bigram columns\n",
     "bigram_cols = [col for col in z_scores.columns if '-' in col]\n",
     "X = z_scores[bigram_cols].fillna(0)\n",
     "\n",
-    "# Compute cosine similarity\n",
+    "# compute cosine similarity\n",
     "sim_matrix = cosine_similarity(X)\n",
     "\n",
-    "# Convert to distance\n",
+    "# convert to distance\n",
     "dist_matrix = 1 - sim_matrix\n",
     "\n",
-    "# Ensure diagonal is exactly zero\n",
+    "# ensure diagonal is exactly zero\n",
     "np.fill_diagonal(dist_matrix, 0)\n",
     "\n",
-    "# Flatten for linkage\n",
+    "# flatten for linkage\n",
     "dist_condensed = squareform(dist_matrix)\n",
     "\n",
     "\n",
-    "# Hierarchical clustering\n",
+    "# hierarchical clustering\n",
     "Z = linkage(dist_condensed, method='ward')\n",
     "\n",
-    "# Plot dendrogram\n",
+    "# plot dendrogram\n",
     "plt.figure(figsize=(14, 8))\n",
     "dendro = dendrogram(\n",
     "    Z,\n",
@@ -914,7 +896,7 @@
     "    leaf_font_size=10,\n",
     ")\n",
     "\n",
-    "# Color leaves by author\n",
+    "# color leaves by author\n",
     "ax = plt.gca()\n",
     "author_list = z_scores['authors'].tolist()\n",
     "unique_authors = z_scores['authors'].unique()\n",
@@ -1045,14 +1027,14 @@
    "source": [
     "##pca analysis on all grams\n",
     "\n",
-    "#Combine POS uni-, bi-, and trigram frequencies\n",
+    "#combine POS uni-, bi-, and trigram frequencies\n",
     "X = {}\n",
     "for name in combined_data['names']:\n",
     "    X[name] = copy.deepcopy(pos_frequencies[name])      # Start with unigrams\n",
     "    X[name].update(pos_bigrams[name])                   # Add bigrams\n",
     "    X[name].update(pos_trigrams[name])                  # Add trigrams\n",
     "\n",
-    "#Normalize keys: turn tuples into strings\n",
+    "#normalize keys: turn tuples into strings\n",
     "def string_key(k):\n",
     "    if isinstance(k, str):\n",
     "        return k\n",
@@ -1062,13 +1044,13 @@
     "for name, feats in X.items():\n",
     "    X_str_keys[name] = {string_key(k): v for k, v in feats.items()}\n",
     "\n",
-    "#Build DataFrame\n",
+    "#build DataFrame\n",
     "df_features = pd.DataFrame.from_dict(X_str_keys, orient=\"index\").fillna(0)\n",
     "\n",
     "print(\"Feature matrix shape:\", df_features.shape)\n",
     "print(\"Sample columns:\", df_features.columns[:-10])\n",
     "\n",
-    "#Apply PCA\n",
+    "#apply PCA\n",
     "pca = PCA(n_components=2) #collapse featrues into 2 dimensions for easy visualisation\n",
     "principal_components = pca.fit_transform(df_features)\n",
     "\n",
@@ -1103,7 +1085,7 @@
     "    s=300\n",
     ")\n",
     "\n",
-    "#Add name labels for each point\n",
+    "#add name labels for each point\n",
     "for i, row in pca_df.iterrows():\n",
     "    plt.text(\n",
     "        row[\"PC1\"] + 0.002,      # small horizontal offset\n",
